@@ -128,7 +128,7 @@ ERR_DEFINE("ELAB-VAR-3",
 // wire/reg has no driver
 ERR_DEFINE("ELAB-VAR-4",
            EWarning,   2,
-           "variable \"%1%\" is out of the range definition of \"%2\".");
+           "variable \"%1%\" is out of the range definition of \"%2%\".");
 
 /// on the left side of an assign should be a non-const variable or concatenation
 ERR_DEFINE("SYN-ASSIGN-0", 
