@@ -1,5 +1,10 @@
+##### Thu 20/06/2012
+* Endless debugging for the range operation although no multi-dimension ranges are actually used in OR1200 RTL.
+* Deduction of RangeArray is implemented.
+
 ##### Wed 20/06/2012 ( boring due to the routine work to rewrite inherited fuctions and parsers. )
-* Imply complicated no-driver, multi-driver and no-load analysis on all veriable, although missing a deduction operation on RangeArray right now.
+* Imply complicated no-driver, multi-driver and no-load analysis on all veriable, although missing a deduction operation 
+  on RangeArray right now.
 * Provide out-of-range check to all variables.
 * Modify the parser to use the new netlist::RangeArray.
 * Modify the streamout facilities of netlist::Range, netlist::RangeArray and netlist::RangeArrayCommon.
